Fix syntax error.